# Rust_Backend

./: README.md
Backend CRUD/: .env
Backend CRUD/backend/: Cargo.toml
Backend CRUD/backend/src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs  state.rs
